Use "vertical-align:super" for external links instead of a hack, fixes #577

--- a/css/wikka.css
+++ b/css/wikka.css
@@ -112,8 +112,7 @@ a.ext:hover {
 
 .exttail {
 	color: #999;
-	position: relative;
-	bottom: 0.5ex;
+	vertical-align: super;
 }
 
 .header a:hover {
